--- a/view/netglue-prismic/toolbar/styles.css
+++ b/view/netglue-prismic/toolbar/styles.css
@@ -1,10 +1,10 @@
 
 .prismic-toolbar {
-    right: 0;
+    left: 0;
     bottom: 0;
     background: #000;
     background: rgba(0,0,0,0.6);
-    border-radius: 4px 0 0 0;
+    border-radius: 0 4px 0 0;
     z-index: 2000;
     position: fixed;
     color: #fff;
